Successfully Get Service Works.

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    //"SqlConnectionString": "Data Source=TYENUC-PC;Initial Catalog=AccountMS_DB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SqlConnectionString": "Data Source=TR-ADN-BT0XSG3;Initial Catalog=AccountMS_DB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
